@@ -1,21 +1,9 @@
-//
-// AssemblyInfo.cs for AspNetEdit MonoDevelop AddIn
-//
-// Authors:
-//	Michael Hutchinson <m.j.hutchinson@gmail.com>
-//
+// Autogenerated from AspNetEdit.addin.xml
+
 using System.Reflection;
-using System.Runtime.CompilerServices;
 
-[assembly: AssemblyTitle ("AspNetEdit Editor")]
-[assembly: AssemblyDescription ("AspNetEdit Graphical ASP.NET Editor for the MonoDevelop IDE")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("AspNetEdit")]
-[assembly: AssemblyCopyright ("Copyright © 2005-2006 Michael Hutchinson")]
-[assembly: AssemblyTrademark("")]
-
-[assembly: AssemblyCulture("")]
-[assembly: AssemblyConfiguration("")]
-
-[assembly: AssemblyVersion("0.0.1.0")]
-[assembly: AssemblyFileVersion("0.0.1.0")]
+[assembly: AssemblyProduct ("MonoDevelop")]
+[assembly: AssemblyTitle ("ASP.NET Visual Designer")]
+[assembly: AssemblyCopyright ("MIT X11")]
+[assembly: AssemblyVersion ("1.9.1")]
+[assembly: AssemblyDescription ("Visual Designer for ASP.NET Web Forms.")]
