@@ -1,3 +1,8 @@
+2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
+	the addin manifests.
+
 2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* configure:
